Fix dark mode

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fffff8;
+  /*background-color: #fffff8;*/
   margin-left: auto;
   margin-right: auto;
   max-width: 1400px;
